[package]
name = "rusty-rain"
version = "0.3.7"
authors = ["cowboy8625 <https://github.com/cowboy8625>"]
edition = "2021"
description = "A cross platform CMatrix like program."
readme = "README.md"
repository = "https://github.com/cowboy8625/rusty-rain"
homepage = "https://rusty-rain.xyz"
license-file = "LICENSE"
keywords = ["matrix", "matrix-rain", "emoji", "cmatrix", "rain"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.43", features = ["cargo", "derive"] }
crossterm = "0.29.0"
rand = "0.9.2"
itertools = "0.14.0"

[profile.release]
debug = true
