[package]
name = "rusty-rain"
version = "0.3.7"
authors = ["cowboy8625 <https://github.com/cowboy8625>"]
edition = "2021"
description = "A cross platform CMatrix like program."
readme = "README.md"
repository = "https://github.com/cowboy8625/rusty-rain"
homepage = "https://rusty-rain.xyz"
license-file = "LICENSE"
keywords = ["matrix", "matrix-rain", "emoji", "cmatrix", "rain"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.43", features = ["cargo", "derive"] }
crossterm = "0.29.0"
rand = "0.9.2"

[profile.release]
debug = true

[package.metadata.deb]
maintainer = "cowboy8625 <cowboy8625@protonmail.com>"
priority = "optional"
section = "utils"
depends = ""
assets = [
    ["target/release/rusty-rain", "usr/bin/", "755"],
    ["rusty-rain.1", "usr/share/man/man1/", "644"]
]
