[package]
name = "rusty-rain"
version = "0.4.0"
authors = ["cowboy8625 <https://github.com/cowboy8625>"]
edition = "2024"
description = "Cross platform CMatrix like program."
readme = "README.md"
repository = "https://github.com/cowboy8625/rusty-rain"
# homepage = "https://rusty-rain.xyz"
license-file = "LICENSE"
keywords = ["matrix", "matrix-rain", "emoji", "cmatrix", "rain"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.43", features = ["cargo", "derive"] }
crossterm = "0.29.0"
rand = "0.9.2"
ezemoji = "1.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
insta = { version = "1.43.1", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[package.metadata.deb]
maintainer = "cowboy8625 <cowboy8625@protonmail.com>"
extended-description-file = "debian/description"
priority = "optional"
section = "utils"
depends = []
license-file = ["debian/copyright"]
changelog = "debian/changelog"
assets = [
    ["target/release/rusty-rain", "usr/bin/", "755"],
    ["debian/rusty-rain.1", "usr/share/man/man1/", "644"]
]
